# computational_physics_learn

./: .gitignore
hw07-billiard_problem/: Cargo.toml
hw07-billiard_problem/config/: bezier_irregular.toml  circle.toml  default.toml  podium_stadium.toml  polygon_octagon.toml  polygon_square.toml
hw07-billiard_problem/output/: bezier_irregular_history.csv  podium_stadium_history.csv  polygon_octagon_history.csv  polygon_square_history.csv
hw07-billiard_problem/src/: boundary.rs  cli.rs  config.rs  detector.rs  main.rs  output.rs  physics.rs  render.rs  sampling.rs  simulation.rs
hw07-billiard_problem/src/math/: mod.rs
hw08-chaotic_tumbling/: Cargo.toml
hw08-chaotic_tumbling/config/: ensemble.toml  simulation.toml  velocity_scan.toml
hw08-chaotic_tumbling/ensemble_output/: delta_theta_average.csv  delta_theta_average.json
hw08-chaotic_tumbling/output/: timeseries.json
hw08-chaotic_tumbling/scan_output/: lyapunov_vs_eccentricity.csv  lyapunov_vs_eccentricity.json
hw08-chaotic_tumbling/src/: analysis.rs  config.rs  dynamics.rs  ensemble.rs  lib.rs  main.rs  output.rs  plotting.rs  scan.rs  state.rs
hw10-waves/: Cargo.toml  README.md
hw10-waves/configs/: right_traveling.toml  stability_scan.toml
hw10-waves/src/: config.rs  initial_conditions.rs  main.rs  output.rs  solver.rs
