[package]
name = "hw07-billiard_problem"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
nalgebra = { version = "0.33", features = ["serde"] }
plotters = { version = "0.3", features = ["bitmap_backend", "svg_backend"] }

[dev-dependencies]
approx = "0.5"
